FEAT: Implemented VoidTransactionViewModel.kt to be used by TransactionListScreen.kt for voiding transactions.
NOTE: We can't test this functionality because I do not have access to a test account that is not a dummy account, hence I can't simulate transactions hence there is no transactions to void.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -477,4 +477,13 @@
     <string name="transaction_status_reversed_message">Reversed</string>
     <string name="transactions_empty">No transactions found</string>
     <string name="transaction_void_button">VOID TRANSACTION</string>
+
+    <string name="void_confirmation_title">Void Transaction</string>
+    <string name="void_confirmation_message">Are you sure you want to void this transaction?</string>
+    <string name="void_confirm_button">YES, VOID</string>
+    <string name="void_cancel_button">Cancel</string>
+    <string name="void_success_title">Transaction Voided</string>
+    <string name="void_success_message">Transaction has been successfully voided</string>
+    <string name="void_failed_title">Void Failed</string>
+    <string name="void_processing">Voiding transaction...</string>
 </resources>
